# dep

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  autoload.php  conda_requirements.txt  environment.yml  pip_requirements.txt  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg
.github/: setupdata.sh  setuppaths.sh
.github/workflows/: build.yml  codeql.yml  dailyerosion.yml  etchosts.txt  main.yml  pydep.yml
admin/: compare.phtml  index.php
admin/map/: index.php  nextgen-details.php  nextgen.js
admin/plots/: .htaccess  convergence.py  sflen.py  slopes.py  ss.py
config/: .gitignore  apache-vhost.conf  dailyerosion.inc  settings.inc.php  settings.inc.php.in
config/systemd/: dep-realtime.service  dep-realtime.timer  dep-reprocess.service  dep-reprocess.timer
database/: schema_manager.py
database/upgrade/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  23.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
docs/: ISWC_Article.odt  aepe-meetings.md  meetings.md
htdocs/: compare.phtml  contacts.php  disclaimer.php  error404.php  index.phtml  nextgen-details.php  nextgen.js  nextgen.php
htdocs/auto/: .htaccess  climatefile.py  huc12_bymonth.py  huc12_slopes.py  huc12report.py  map.py  map.wsgi
htdocs/dl/: shapefile.py
htdocs/docs/: climate.phtml  compute.phtml  index.phtml  webservices.phtml
htdocs/geojson/: .htaccess  hsearch.py  huc12.py  huc12_events.py  timedomain.py
htdocs/map/: index.php  nextgen-details.php  nextgen.css  nextgen.js  nextgen_tmp.js  offcanvas.css  offcanvas.js  play.html
htdocs/plots/: .htaccess  convergence.py  sflen.py  slopes.py
include/templates/: app.phtml  footer.phtml  header.phtml  navbar.phtml  single-fluid.phtml
prj2wepp/: README.txt  prj2wepp
prj2wepp/userdb/: Alfalfa then fall moldboard plowing (2).db  Cor_0964-1800 GDD-2013 DEP.DB  Cor_0965-1700 GDD-2013 DEP.DB  Cor_0966-1600 GDD-2013 DEP.DB  Cor_0967-1500 GDD-2013 DEP.DB  Oat_2966-1700 GDD-2013 DEP.DB  Oat_2967-1500 GDD-2013 DEP.DB  Oats- Central and Southern Iowa (0).db  Oats- Northern Iowa (0).db  Soy_2191-1800 GDD-2013 DEP.DB  Soy_2193-1600 GDD-2013 DEP.DB  Soy_2194-1500 GDD-2013 DEP.DB  Soybeans for Northern Iowa (0).db  Soybeans for Southern Iowa (0).db
prj2wepp/wepp/: hill.slp
scripts/: MASTER.sh  REALTIME.sh  crontab.txt
scripts/RT/: WIND_EROSION.md  badcli_from_errors.py  create_irrigation_files.py  enqueue_jobs.py  enqueue_sweep_jobs.py  enqueue_wepp_jobs.py  enqueue_weps2sweep_jobs.py  enqueue_weps_jobs.py  env2csv.py  env2database.py  flowpathlength_totals.py  harvest2database.py  harvest_wb.py  magic.R  proctor.py  proctor_sweep.py  queue_worker.py  rabbitmq_example.json  reprocess.py  scenario_compare_event.py  spam_twitter.py  sweep_result_persister.py  sweep_worker.py  sweepin_template.txt  wepp_worker.py  weps2sweep_worker.py  weps_worker.py
scripts/biomass/: huc12_map.py  modify_proj.py  monthly.py  sequential_replacement.py  yearly.py
scripts/cligen/: add_clifile.py  add_clifiles.py  add_new_year.py  arb_precip_delta.py  assign_climate_file.py  cli2weppcliff.py  copy_idep1.py  daily_clifile_editor.py  edit_cli_header.py  edit_hourly_wind.py  exercise.py  init_clifiles.py  init_hourly_wind_zeros.py  locate_clifile.py  map_clifile_points.py  modify_idep1.py  plot_qc_mrms_precip.py  print_rate.py  proctor_tile_edit.py  qc_summarize.py  r_factor.py  remove_leapday.py  replace_year.py  verify_clifile.py  zero_precip.py
scripts/climatechange/: README.md  addstorms_cli.py  dump_results.py  figure1.py  figure2.py  figure3.py  figure4.py  myhucs.txt  plot_yearly.py  shift_cli.py
scripts/convergence/: dump_results.py  plot_avgs.py
scripts/cscap/: README.md  assign_mlra.py  copy_modify_0proj.py  copy_modify_0run.py  corn,soybean-fall mulch till.rot  mlra_summary.py  modify_for_switchgrass.py  monthly.py  plot_residue.py  results.py  rotation_generator.py
scripts/djames/: 140630_averaging.py  exercise.py  faster.py
src/: README.md
tests/: test_dailyerosion.py  test_pydep.py  test_rfactor.py  test_tillage.py  test_util.py
(+7711 files in other folders)
