[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "pydep"
description = "Daily Erosion Project Python package"
readme = "README.md"
keywords = [ "agriculture", "climate", "erosion", "meteorology" ]
license = { text = "Apache" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "gdal",
  "httpx",
  "numpy",
  "pandas",
  "pika",
  "pydantic",
  "pyiem",
  "rasterio",
  "scipy",
  "sqlalchemy",
  "tqdm",
]
urls."homepage" = "https://github.com/dailyerosion/dep"

[tool.setuptools]
package-dir = { "" = "src" }
packages.find.where = [ "src" ]
packages.find.include = [ "pydep*" ]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.ruff]
target-version = "py310"
line-length = 79
# Don't respect gitignore so we can lint gitignored scripts/plots directory
respect-gitignore = false
lint.select = [
  "B",      # bugbear
  "D103",   # pydocstyle, missing docstring in public method
  "D202",   # pydocstyle, blank line after docstring
  "E",      # pycodestyle errors
  "E722",   # bare except (catch without exception type)
  "ERA",    # eradicate (commented out code)
  "F",      # pyflakes
  "I",      # isort
  # "PD",   # pandas
  "PIE",    # perf
  "PLE",    # pylint error
  "PLW",    # pylint warning
  "RET",    # return
  "S110",   # try-except-pass (empty except with pass)
  "SIM105", # try-except-pass (suppressible exception, use contextlib.suppress)
  "SIM115", # open() without context manager (use 'with' statement)
  "T",      # types
]
# per memory issues microsoft/pylance-release/issues/5739
# per type checking pain microsoft/pylance-release/issues/6373
lint.per-file-ignores."scripts/**/*.py" = [
  "T20", # print
]

[tool.pyright]
autoSearchPaths = false
exclude = [ "data/", "prj2wepp/" ]
ignore = [ "data/", "prj2wepp/" ]
typeCheckingMode = "off"
