[metadata]
name = pydep
author = daryl herzmann
author_email = akrherz@gmail.com
url = https://github.com/dailyerosion/pydep
keywords = agriculture
license = Apache
license-file = LICENSE
description = Collection of things that may help with processing.
description-file = README.md

[options]
include_package_data = True
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
setup_requires = setuptools_scm

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
log_level = INFO

[pep8]
# black conflicts with pep8 E203
ignore = W503,E203

[flake8]
ignore = W503,E203

